<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/image_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/sample_oval" />

            <TextView
                android:id="@+id/text_profile_name"
                style="@style/bigPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_profile_image"
                app:layout_constraintStart_toStartOf="@+id/img_profile_image"
                app:layout_constraintTop_toBottomOf="@+id/img_profile_image"
                tools:text="Jack London" />

            <TextView
                android:id="@+id/text_last_synced"
                style="@style/mediumPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/text_profile_name"
                app:layout_constraintStart_toStartOf="@+id/text_profile_name"
                app:layout_constraintTop_toBottomOf="@+id/text_profile_name"
                tools:text="Last synced: 7 AM" />

            <Button
                android:id="@+id/btn_sign_out"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/sign_out"
                app:layout_constraintEnd_toEndOf="@+id/text_last_synced"
                app:layout_constraintStart_toStartOf="@+id/text_last_synced"
                app:layout_constraintTop_toBottomOf="@+id/text_last_synced" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign_out" />

            <TextView
                android:id="@+id/text_sign_in_guide"
                style="@style/mediumPrimaryText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/agro_regularly_checks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>