<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="disease"
            type="com.dp.agro.data.model.Disease" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_sheet">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_logo" />

        <TextView
            android:id="@+id/title_app"
            style="@style/bigPrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_logo"
            app:layout_constraintStart_toEndOf="@+id/img_logo"
            app:layout_constraintTop_toTopOf="@+id/img_logo" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_disease_name"
                    style="@style/mediumPrimaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@{disease.name}"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Northern Corn Leaf Blight" />

                <TextView
                    android:id="@+id/text_disease_level"
                    style="@style/mediumPrimaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{disease.threatLevel}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_disease_name"
                    tools:text="Very Danger" />

                <TextView
                    android:id="@+id/text_disease_description"
                    style="@style/smallSecondaryText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{disease.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_disease"
                    tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry." />

                <ImageView
                    android:id="@+id/img_disease"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/image_description"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/sample_rounded" />

                <Button
                    android:id="@+id/btn_search"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/search"
                    android:textSize="12sp"
                    app:icon="@drawable/icon_search"
                    app:iconPadding="5dp"
                    app:iconSize="17.5dp"
                    app:iconTint="@null"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_disease_description" />

                <Button
                    android:id="@+id/btn_copy"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/copy"
                    android:textSize="12sp"
                    app:icon="@drawable/icon_copy"
                    app:iconSize="17.5dp"
                    app:iconTint="@color/iconColor"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_search"
                    app:layout_constraintStart_toEndOf="@+id/btn_search"
                    app:layout_constraintTop_toTopOf="@+id/btn_search" />

                <Button
                    android:id="@+id/btn_share"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/share"
                    android:textSize="12sp"
                    app:icon="@drawable/icon_share"
                    app:iconPadding="5dp"
                    app:iconSize="17.5dp"
                    app:iconTint="@color/iconColor"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_copy"
                    app:layout_constraintStart_toEndOf="@+id/btn_copy"
                    app:layout_constraintTop_toTopOf="@+id/btn_copy" />

                <TextView
                    android:id="@+id/title_disease_symptoms"
                    style="@style/mediumPrimaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/symptoms"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_search" />

                <TextView
                    android:id="@+id/text_disease_symptoms"
                    style="@style/mediumPrimaryText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{disease.symptoms}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_disease_symptoms"
                    tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry." />

                <TextView
                    android:id="@+id/title_disease_treatments"
                    style="@style/mediumPrimaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/treatments"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_disease_symptoms" />

                <TextView
                    android:id="@+id/text_disease_treatments"
                    style="@style/mediumPrimaryText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{disease.treatments}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_disease_treatments"
                    tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry." />

                <TextView
                    android:id="@+id/text_source"
                    style="@style/mediumPrimaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_disease_treatments"
                    app:sourceText="@{disease.source}"
                    tools:text="Source: Wikipedia" />

                <LinearLayout
                    android:id="@+id/progress_container"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/backgroundColor"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>